# cargo-diet

./: CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  Makefile  README.md
.github/workflows/: release.yml  rust.yml
ci/: install.sh
src/: error.rs  format_changeset.rs  lib.rs  main.rs
tests/: helpers.sh  stateless-journey.sh
tests/snapshots/: failure-invalid-cargo-manifest  failure-invalid-cargo-manifest-due-to-packaging-with-human-readable-error  failure-no-cargo-manifest  failure-package-size-limit-exceeded-quiet  failure-with-human-readable-package-related-error  success-in-new-project-readme-reset-dry-run  success-include-directive-in-new-project  success-include-directive-in-new-project-cargo-toml  success-include-directive-in-new-project-cargo-toml-with-tests-excluded  success-include-directive-in-new-project-cargo-toml-with-tests-excluded-and-readme  success-include-directive-in-new-project-cargo-toml-with-tests-excluded-dry-run  success-include-directive-in-new-project-dry-run  success-include-directive-in-new-project-limit-exceeded  success-include-directive-in-new-project-limit-not-exceeded  success-include-directive-in-new-project-readme-reset-dry-run  success-include-directive-in-new-project-readme-reset-no-dryrun  success-include-directive-in-new-project-test-added  success-include-directive-in-new-project-test-added-dry-run  success-include-directive-in-new-project-test-added-no-dryrun  success-include-directive-in-new-project-test-added-reset-dry-run  success-include-directive-trailing-context-dry-run  success-list-no-limit-with-zero  success-list-with-limit
