[package]
name = "cargo-diet"
version = "1.1.0"
authors = ["Sebastian Thiel <byronimo@gmail.com>"]
edition = "2018"
repository = "https://github.com/the-lean-crate/cargo-diet"
include = ["src/**/*", "LICENSE.md", "README.md"]
license = "MIT"
readme = "README.md"
description = "Make your crate lean by computing size-optimal include directives for Cargo manifests"
categories = [
    "development-tools",
    "development-tools::cargo-plugins",
]
keywords = [
    "cargo",
    "cargo-subcommand",
    "cli",
    "lean",
    "crates",
]

[dependencies]
structopt = "0.3.14"
anyhow = "1.0.31"
quick-error = "1.2.3"
locate-cargo-manifest = "0.2.0"
toml_edit = "0.1.5"
bytesize = "1.0.1"
criner-waste-report = { version = "0.1.0", default-features = false }
ansi_term = "0.12.1"
difference = "2.0.0"
atty = "0.2.14"
ascii_table = "3.0.1"
termsize = "0.1.6"
byte-unit = "3.1.3"
tar = "0.4.28"
flate2 = "1.0.14"

[[bin]]
name="cargo-diet"
path="src/bin/main.rs"

[profile.release]
panic = 'unwind'
lto = "fat"
codegen-units = 1
incremental = false
overflow-checks = true
