[package]
name = "cargo-diet"
version = "1.2.6"
authors = ["Sebastian Thiel <byronimo@gmail.com>"]
edition = "2018"
repository = "https://github.com/the-lean-crate/cargo-diet"
include = ["src/**/*", "LICENSE.md", "README.md"]
license = "MIT"
readme = "README.md"
description = "Make your crate lean by computing size-optimal include directives for Cargo manifests"
categories = [
    "development-tools",
    "development-tools::cargo-plugins",
]
keywords = [
    "cargo",
    "cargo-subcommand",
    "cli",
    "lean",
    "crates",
]

[features]
default = []
dev-support = ["rmp-serde"]

[dependencies]
anyhow = "1.0.72"
quick-error = "2.0.1"
locate-cargo-manifest = "0.2.2"
toml_edit = "0.19.14"
bytesize = "1.2.0"
criner-waste-report = { version = "0.1.5", default-features = false }
ansi_term = "0.12.1"
difference = "2.0.0"
atty = "0.2.14"
ascii_table = "4.0.2"
termsize = "0.1.6"
byte-unit = "4.0.19"
tar = "0.4.39"
flate2 = "1.0.26"
rmp-serde = { version = "1.1.2", optional = true }
argh = "0.1.10"

[[bin]]
name="cargo-diet"
path="src/bin/main.rs"

[profile.release]
panic = 'abort'
lto = "fat"
codegen-units = 1
incremental = false
overflow-checks = true
opt-level="s"
build-override = { opt-level = 0 }
